unpackaged/main/default/objects/sfsp__SalesNodeRule__c/sfsp__SalesNodeRule__c.object-meta.xml
<CustomObject>
    <label>Sales Node Rule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Node Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>