unpackaged/main/default/objects/sfsp__SalesNodeRule__c/fields/sfsp__BooleanFilter__c.field-meta.xml
<CustomField>
    <fullName>sfsp__BooleanFilter__c</fullName>
    <label>Boolean Filter</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>