unpackaged/main/default/objects/sfsp__SalesNodeRule__c/fields/sfsp__FilterLogic__c.field-meta.xml
<CustomField>
    <fullName>sfsp__FilterLogic__c</fullName>
    <label>Filter Logic</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>all</fullName>
                <label>All</label>
            </value>
            <value>
                <fullName>any</fullName>
                <label>Any</label>
            </value>
            <value>
                <fullName>custom</fullName>
                <label>Custom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>