unpackaged/main/default/objects/sfsp__SalesNodeRule__c/fields/sfsp__SalesNodeBoundary__c.field-meta.xml
<CustomField>
    <fullName>sfsp__SalesNodeBoundary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Node Boundary</label>
    <referenceTo>sfsp__SalesNodeBoundary__c</referenceTo>
    <relationshipLabel>Sales Node Rules</relationshipLabel>
    <relationshipName>SalesNodeRules</relationshipName>
    <type>Lookup</type>
</CustomField>