unpackaged/main/default/objects/sfsp__SalesNodeRule__c/fields/sfsp__SortOrder__c.field-meta.xml
<CustomField>
    <fullName>sfsp__SortOrder__c</fullName>
    <label>Sort Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>